# qiskit-toqm

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: conda.yml  pip.yml  randomized_tests.py  randomized_tests.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: conf.py
src/: main.cpp
src/qiskit_toqm/: __init__.py  toqm_latency.py  toqm_plugin.py  toqm_profile.py  toqm_strategy.py  toqm_strategy_presets.py  toqm_swap.py
src/qiskit_toqm/native/: __init__.py  main.cpp
test/qiskit_toqm/: test_toqm_latency.py  test_toqm_swap.py
test/qiskit_toqm/native/: test_basic.py
tests/: test_basic.py
