[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.8.0",
    "cmake>=3.21",
    "scikit-build>=0.12",
]

build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
test-requires = ["qiskit-terra>=0.19"]
test-skip = "cp310-win32 cp310-manylinux_i686"
skip = "pp* cp36-* *musllinux*"
test-command = "pytest {project}/test"
test-extras = ["test"]
