[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.8.0",
    "cmake>=3.21",
    "scikit-build>=0.12",
]

build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
test-requires = ["qiskit-terra>=0.19"]
test-skip = "cp310-win32 cp310-manylinux_i686"
skip = "pp* cp36-* *musllinux*"
test-command = "pytest {project}/test"
test-extras = ["test"]
# We need to use pre-built versions of Numpy and Scipy in the tests; they have a
# tendency to crash if they're installed from source by `pip install`, and since
# Numpy 1.22 there are no i686 wheels, so we force pip to use older ones without
# restricting any dependencies that Numpy and Scipy might have.
before-test = "pip install --only-binary=numpy,scipy numpy scipy"
